--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "@heroicons/react": "^2.1.3",
+    "framer-motion": "^11.0.24",
+    "next": "14.1.4",
     "react": "^18",
+    "react-animated-numbers": "^0.18.0",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-intersection-observer": "^9.8.1",
+    "react-tilt": "^1.0.2",
+    "react-type-animation": "^3.2.0",
+    "react-vertical-timeline-component": "^3.6.0",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "eslint-config-next": "14.1.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
